And this is why you don't change code right before you check it in
Change to CSS and the element types to get correct styling applied to
controlled region

--- a/examples/windowSplitter/HorizontalSplitter.html
+++ b/examples/windowSplitter/HorizontalSplitter.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <nav class="controlledPane" id="controlledPane" style="width:100%;">
-    <h1>Navigation Content</h1></nav>
+  <aside class="controlledPane" id="controlledPane" style="width:100%;">
+    <h1>Navigation Content</h1></aside>
   <div style="width:100%;left:0px;right:0px;" tabindex=0 id="windowSplitter" aria-controls="controlledPane" aria-orientation="horizontal" aria-label="window splitter" role="separator" aria-expanded="true">
     <div id="windowSplitterInner"></div>
   </div>
