On branch WindowSplitter, modified:   aria-practices.html to remove an extra word from window splitter states and properties section.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2810,7 +2810,7 @@
         <h4>WAI-ARIA Roles, States, and Properties</h4>
         <ul>
           <li>The element that receives focus has role <a href="#separator" class="role-reference">separator</a>.</li>
-          <li>The element with role <code>separator</code> has a the <a href="#aria-orientation" class="property-reference">aria-orientation</a> property set to match the orientation of the splitter. </li>
+          <li>The element with role <code>separator</code> has the <a href="#aria-orientation" class="property-reference">aria-orientation</a> property set to match the orientation of the splitter. </li>
           <li>If the splitter can be expanded and collapsed, the element with role <code>separator</code> has the <a href="#aria-expanded" class="state-reference">aria-expanded</a> state set to <code>true</code> when it is expanded and set to <code>false</code> when it is collapsed. </li>
           <li>The element with role <code>separator</code> is labeled with <a href="aria-label" class="property-reference">aria-label</a>, <a href="aria-labelledby" class="property-reference">aria-labelledby</a>, or the <code>title</code> attribute. </li>
           <li>The element with role <code>separator</code> has the <a href="#aria-controls" class="property-reference">aria-controls</a> property set to the IDs of the panes it resizes. </li>
